--- a/style.css
+++ b/style.css
@@ -122,3 +122,25 @@ h2 {
 .illustration-subtext {
     width: 130px;
 }
+
+.quote-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #e5e7eb;
+    padding: 50px 60px 40px 60px;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: 200;
+    color: #1f2937;
+    width: 750px;
+}
+
+.quote-author {
+    font-size: 24px;
+    font-weight: 900;
+    text-align: end;
+    width: 700px;
+}
